Fix ItemParticle constant CPU usage

Takes particleSystem enabled and running states and particleItem
enabled and its parent enabled into account with some connections

Fixes: QTBUG-117923
Change-Id: I3921759cf09a3aea2b8bfa51f847c5a909bb534b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit c6fad0e79ec7768e1bbd852dd85a594e4318f8f7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 3fbca326e5bd4c0fabec79bfc7ff7439b30fc2d0)
(cherry picked from commit cd64942d4542a19f20c647d5c37f60b82937f8dc)